--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Pegawai BPS Kota Jakarta Barat</h1>
+      <h1>BPS Kota Jakarta Barat</h1>
     </header>
 
     <section id="photo-slideshow">
@@ -80,4 +80,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
