--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <header>
-      <h1>BPS Kota Jakarta Barat</h1>
+      <img
+        src="img/logo-bps.png"
+        alt="Logo BPS Kota Jakarta Barat"
+        class="logo-header"
+      />
     </header>
 
     <section id="photo-slideshow">
@@ -16,7 +20,9 @@
         <div class="carousel-container"></div>
       </div>
 
-      <div class="carousel-dots"></div>
+      <div class="carousel-dots-wrapper">
+        <div class="carousel-dots"></div>
+      </div>
     </section>
 
     <main>
@@ -80,5 +86,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-
