--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <table id="employee-table">
           <thead>
             <tr>
+              <th class="col-no">No</th>
               <th class="freeze-col">Nama Pegawai</th>
               <th>NIP Lama</th>
               <th>NIP Baru</th>
@@ -86,3 +87,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
