--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 Daftar Pegawai. All rights reserved.</p>
+      <p>&copy; 2025 Daftar Pegawai BPS Kota Jakarta Barat. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
+
 
